tests/typec-test/test_out/simple-spec-inheritance.txt
error: 'paramTyParam { index: TyParamIdx(0), is_asoc: false, asoc_index: 0, asoc_thread: 0 }' does not implement 'A'
  --> simple-spec-inheritance/root.ctl:23:30
   |
23 | fn [T: C] sum() -> uint => T\A\a() + T\B\a()
   |                              ^^^ here
   |

error: 'paramTyParam { index: TyParamIdx(0), is_asoc: false, asoc_index: 0, asoc_thread: 0 }' does not implement 'B'
  --> simple-spec-inheritance/root.ctl:23:40
   |
23 | fn [T: C] sum() -> uint => T\A\a() + T\B\a()
   |                                        ^^^ here
   |

